[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "preliz"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ArviZ team", email = "arviz.devs@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
description = "Exploring and eliciting probability distributions."
dependencies = [
  "matplotlib>=3.7",
  "numba>=0.59",
  "numpy>=1.24",
  "scipy>=1.10, <1.13"
]

[tool.flit.module]
name = "preliz"

[project.urls]
source = "https://github.com/arviz-devs/preliz"
tracker = "https://github.com/arviz-devs/preliz/issues"
documentation = "https://preliz.readthedocs.io"
funding = "https://opencollective.com/arviz"

[project.optional-dependencies]
full = [
  "nbclient<0.6,>=0.2",
  "ipywidgets",
  "ipympl",
]
lab = ["jupyterlab"]
notebook = ["notebook"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 100

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
