[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "preliz"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ArviZ team", email = "arviz.devs@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
description = "Exploring and eliciting probability distributions."
dependencies = [
  "matplotlib>=3.7",
  "numba>=0.59",
  "numpy>=1.24",
  "scipy>=1.10, <1.16"
]

[tool.flit.module]
name = "preliz"

[project.urls]
source = "https://github.com/arviz-devs/preliz"
tracker = "https://github.com/arviz-devs/preliz/issues"
documentation = "https://preliz.readthedocs.io"
funding = "https://opencollective.com/arviz"

[project.optional-dependencies]
full = [
  "nbclient>=0.2",
  "ipywidgets",
  "ipympl",
]
lab = ["jupyterlab"]
notebook = ["notebook"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 100

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # pydocstyle
    "NPY", # numpy specific rules
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
    "TID",  # Absolute imports
]
ignore = [
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "PLR0915",  # too many statements
    "NPY002",   # Replace legacy `np.random.randn` call with `np.random.Generator`
    "NPY201",   # `np.trapz` will be removed in NumPy 2.0. Use `numpy.trapezoid` on NumPy 2.0, or ignore this warning on earlier versions.
    "D1"    # Missing docstring
]

[tool.ruff.lint.per-file-ignores]
"docs/source/**/*.ipynb" = ["D", "E", "F", "I", "NPY", "PL", "TID", "UP", "W"]
"preliz/__init__.py" = ["I", "F401", "E402", "F403"]
"preliz/tests/**/*" = ["D", "PLR2004", "TID252"]
"preliz/tests/**/*.ipynb" = ["E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Disallow all relative imports.

[tool.ruff.format]
docstring-code-format = false
